--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -5,6 +5,15 @@
 	displayBlock="true"
 >
 	<Page title="{i18n>homePageTitle}">
+		<landmarkInfo>
+			<PageAccessibleLandmarkInfo
+				rootRole="Region"
+				rootLabel="{i18n>Overview_rootLabel}"
+				contentRole="Main"
+				contentLabel="{i18n>Overview_contentLabel}"
+				headerRole="Banner"
+				headerLabel="{i18n>Overview_headerLabel}"/>
+		</landmarkInfo>
 		<content>
 			<mvc:XMLView viewName="ui5.walkthrough.view.HelloPanel" />
 			<mvc:XMLView viewName="ui5.walkthrough.view.InvoiceList" />
